--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -243,6 +243,19 @@
             </div>
         </div>
         <!--end::Menu sub-->
+         <!--begin::Menu sub-->
+        <div class="menu-sub menu-sub-accordion pt-3">
+            <!--begin::Menu item-->
+            <div class="menu-item">
+                <a href="{% url 'settings_storage' %}" class="menu-link py-3">
+                    <span class="menu-bullet">
+                        <span class="bullet bullet-dot"></span>
+                    </span>
+                    <span class="menu-title">Склады</span>
+                </a>
+            </div>
+        </div>
+        <!--end::Menu sub-->
     </div>
 </div>
 
