--- a/owm/templates/owm/settings/settings_storage.html
+++ b/owm/templates/owm/settings/settings_storage.html
@@ -5,14 +5,12 @@
 {% endblock %}
 {% block content %}
 
-    <h1>Текущие данные</h1>
+    <h1>Склады</h1>
 
-
-
-    Организация: {{ ms_organization.name }}<br>
-    Контрагент Ozon: {{ ms_ozon_contragent.name }}<br>
-    Контрагент Wb: {{ ms_wb_contragent.name }}<br>
-    Контрагент Yandex: {{ ms_yandex_contragent.name }}<br>
+    Склад Ozon: {{ ms_storage_ozon.name }}<br>
+    Склад Wb: {{ ms_storage_wb.name }}<br>
+    Склад Yandex: {{ ms_storage_yandex.name }}<br>
+    <br>
 <br>
     <h1>Указать данные</h1>
     <form action="#" method="POST">
@@ -21,32 +19,21 @@
     <div class="col-md-6 col-lg-6 col-xl-6 col-xxl-3 mb-md-5 mb-xl-10">
         <div class="card-body d-flex flex-column justify-content-end pe-0">
             <div class="container">
+
                 <div class="row align-items-center mb-2">
                     <div class="col-3 text-end">
-                        <label for="organization-select" class="form-label">Организация:</label>
-                    </div>
-                    <div class="col-6">
-                        <select id="organization-select" name="organization_select" class="form-select" data-placeholder="Организация" style="width: 100% !important;">
-                            <option></option>
-                            {% for item in orglist %}
-                                <option value="{{ item.id }}" data-name="{{ item.name }}" {% if item.id == ms_organization.id %}selected{% endif %}>{{ item.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                </div>
-                <div class="row align-items-center mb-2">
-                    <div class="col-3 text-end">
-                        <label for="ozon-select" class="form-label">Озон:</label>
+                        <label for="ozon-select" class="form-label">Склад Озон:</label>
                     </div>
                     <div class="col-6">
                         <select id="ozon-select" class="form-select" name="ozon_select" data-placeholder="Ozon" style="width: 100% !important;">
                             <option></option>
-                            {% for item in agentlist %}
-                                <option value="{{ item.id }}" data-name="{{ item.name }}" {% if item.id == ms_ozon_contragent.id %}selected{% endif %}>{{ item.name }}</option>
+                            {% for item in storagelist %}
+                                <option value="{{ item.id }}" data-name="{{ item.name }}" {% if item.id == ms_storage_ozon.id %}selected{% endif %}>{{ item.name }}</option>
                             {% endfor %}
                         </select>
                     </div>
                 </div>
+
                 <div class="row align-items-center mb-2">
                     <div class="col-3 text-end">
                         <label for="wb-select" class="form-label">ВБ:</label>
@@ -54,8 +41,8 @@
                     <div class="col-6">
                         <select id="wb-select" class="form-select" name="wb_select" data-placeholder="WB" style="width: 100% !important;">
                             <option></option>
-                            {% for item in agentlist %}
-                                <option value="{{ item.id }}" data-name="{{ item.name }}" {% if item.id == ms_wb_contragent.id %}selected{% endif %}>{{ item.name }}</option>
+                            {% for item in storagelist %}
+                                <option value="{{ item.id }}" data-name="{{ item.name }}" {% if item.id == ms_storage_wb.id %}selected{% endif %}>{{ item.name }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -67,8 +54,8 @@
                     <div class="col-6">
                         <select id="yandex-select" class="form-select" name="yandex_select" data-placeholder="Yandex" style="width: 100% !important;">
                             <option></option>
-                            {% for item in agentlist %}
-                                <option value="{{ item.id }}" data-name="{{ item.name }}" {% if item.id == ms_yandex_contragent.id %}selected{% endif %}>{{ item.name }}</option>
+                            {% for item in storagelist %}
+                                <option value="{{ item.id }}" data-name="{{ item.name }}" {% if item.id == ms_storage_yandex.id %}selected{% endif %}>{{ item.name }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -80,7 +67,6 @@
     <input type="hidden" id="hidden-ozon" name="hidden-ozon" value="">
     <input type="hidden" id="hidden-wb" name="hidden-wb" value="">
     <input type="hidden" id="hidden-yandex" name="hidden-yandex" value="">
-    <input type="hidden" id="hidden-organization" name="hidden-organization" value="">
 
     <button type="submit" class="btn btn-primary btn-block">Сохранить</button>
     </form>
@@ -88,7 +74,6 @@
 
 <script>
     const mappings = {
-            'organization-select': 'hidden-organization',
             'ozon-select': 'hidden-ozon',
             'wb-select': 'hidden-wb',
             'yandex-select': 'hidden-yandex'
