--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -35,7 +35,7 @@
             <!--begin::Menu item-->
             <div class="menu-item menu-accordion" data-kt-menu-trigger="click">
                 <!--begin::Menu link-->
-                <a href="{% url 'autoupdate' %}" class="menu-link py-3">
+                <a href="#" class="menu-link py-3">
                     <span class="menu-bullet">
                         <span class="bullet bullet-dot"></span>
                     </span>
@@ -226,6 +226,19 @@
                         <span class="bullet bullet-dot"></span>
                     </span>
                     <span class="menu-title">Склады</span>
+                </a>
+            </div>
+        </div>
+        <!--end::Menu sub-->
+         <!--begin::Menu sub-->
+        <div class="menu-sub menu-sub-accordion pt-3">
+            <!--begin::Menu item-->
+            <div class="menu-item">
+                <a href="{% url 'settings_status' %}" class="menu-link py-3">
+                    <span class="menu-bullet">
+                        <span class="bullet bullet-dot"></span>
+                    </span>
+                    <span class="menu-title">Статусы</span>
                 </a>
             </div>
         </div>
