--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -28,6 +28,14 @@
                     <span class="menu-title">Инвентаризация FBS</span>
                 </a>
             </div>
+            <div class="menu-item">
+                <a href="{% url 'ms_matching_article' %}" class="menu-link py-3">
+                    <span class="menu-bullet">
+                        <span class="bullet bullet-dot"></span>
+                    </span>
+                    <span class="menu-title">Сопоставлении артиклей</span>
+                </a>
+            </div>
             <!--end::Menu item-->
 
 
