--- a/users/templates/users/sidebar_users_menu_tags.html
+++ b/users/templates/users/sidebar_users_menu_tags.html
@@ -50,7 +50,7 @@
 												<!--begin:Menu item-->
 												<div class="menu-item">
 													<!--begin:Menu link-->
-													<a class="menu-link" href="{% url 'register'%}">
+													<a class="menu-link" href="{% url 'register_user'%}">
 														<span class="menu-bullet">
 															<span class="bullet bullet-dot"></span>
 														</span>
@@ -106,7 +106,7 @@
 												<!--begin:Menu item-->
 												<div class="menu-item">
 													<!--begin:Menu link-->
-													<a class="menu-link" href="{% url 'register'%}">
+													<a class="menu-link" href="{% url 'register_user'%}">
 														<span class="menu-bullet">
 															<span class="bullet bullet-dot"></span>
 														</span>
