--- a/users/templates/users/register_company.html
+++ b/users/templates/users/register_company.html
@@ -42,35 +42,79 @@ Login :: {{ block.super }}
 						<div class="card-body p-10 p-lg-20">
 							<!--begin::Form-->
                             {% show_error_login %}
-                        {{ error }}
-                            {% if 'superuser_is_none' not in error  %}
+                            {{ error }}
+                            {% if 'superuser_is_none' not in error|default:''  %}
                             <form class="form w-100" method="POST" novalidate="novalidate" id="kt_sign_in_form">
                                 {% csrf_token %}
 								<!--begin::Heading-->
 								<div class="text-center mb-11">
 									<!--begin::Title-->
-									<h1 class="text-dark fw-bolder mb-3">Sign In</h1>
+									<h1 class="text-dark fw-bolder mb-3">Регистрация компании</h1>
 									<!--end::Title-->
+                                    Если компания уже создана и вы хотите добавить пользователя,
+                                        необходимо залогиниться под аккаунтом компании и добавить пользователя в настройках
 								</div>
 								<!--begin::Heading-->
-								<!--begin::Separator-->
-								<div class="separator separator-content my-14">
-									<span class="w-125px text-gray-500 fw-semibold fs-7">with login</span>
-								</div>
-								<!--end::Separator-->
 								<!--begin::Input group=-->
+                                <div class="fv-row mb-8">
+									<!--begin::Email-->
+									<input type="text" required placeholder="company" name="{{ form.company.html_name }}" id="{{ form.company.auto_id }}" autocomplete="off" class="form-control bg-transparent" />
+									<!--end::Email-->
+                                    {% if form.company.errors %}
+                                        <ul class="errorlist">
+                                            {% for error in form.company.errors %}
+                                                <li class="text-danger">{{ error }}</li>
+                                            {% endfor %}
+                                        </ul>
+                                    {% endif %}
+								</div>
 								<div class="fv-row mb-8">
 									<!--begin::Email-->
 									<input type="text" required placeholder="login" name="{{ form.username.html_name }}" id="{{ form.username.auto_id }}" autocomplete="off" class="form-control bg-transparent" />
+                                    {% if form.username.errors %}
+                                        <ul class="errorlist">
+                                            {% for error in form.username.errors %}
+                                                <li class="text-danger">{{ error }}</li>
+                                            {% endfor %}
+                                        </ul>
+                                    {% endif %}
 									<!--end::Email-->
 								</div>
-								<!--end::Input group=-->
-								<div class="fv-row mb-3">
-									<!--begin::Password-->
-									<input type="password" placeholder="Password" name="{{ form.password.html_name }}" id="{{ form.password.auto_id }}" autocomplete="off" class="form-control bg-transparent" />
-									<!--end::Password-->
+								<div class="fv-row mb-8">
+									<!--begin::Email-->
+									<input type="text" required placeholder="email" name="{{ form.email.html_name }}" id="{{ form.email.auto_id }}" autocomplete="off" class="form-control bg-transparent" />
+                                    {% if form.email.errors %}
+                                        <ul class="errorlist">
+                                            {% for error in form.email.errors %}
+                                                <li class="text-danger">{{ error }}</li>
+                                            {% endfor %}
+                                        </ul>
+                                    {% endif %}
+									<!--end::Email-->
 								</div>
-								<!--end::Input group=-->
+                                <!-- Поле пароля -->
+                                <div class="fv-row mb-3">
+                                    <input type="password" placeholder="Пароль" name="{{ form.password1.html_name }}" id="{{ form.password1.auto_id }}" autocomplete="off" class="form-control bg-transparent" />
+                                    {% if form.password1.errors %}
+                                        <ul class="errorlist">
+                                            {% for error in form.password1.errors %}
+                                                <li class="text-danger">{{ error }}</li>
+                                            {% endfor %}
+                                        </ul>
+                                    {% endif %}
+                                </div>
+
+                                <!-- Поле подтверждения пароля -->
+                                <div class="fv-row mb-3">
+                                    <input type="password" placeholder="Подтвердите пароль" name="{{ form.password2.html_name }}" id="{{ form.password2.auto_id }}" autocomplete="off" class="form-control bg-transparent" />
+                                    {% if form.password2.errors %}
+                                        <ul class="errorlist">
+                                            {% for error in form.password2.errors %}
+                                                <li class="text-danger">{{ error }}</li>
+                                            {% endfor %}
+                                        </ul>
+                                    {% endif %}
+                                </div>
 								<!--begin::Wrapper-->
 								<div class="d-flex flex-stack flex-wrap gap-3 fs-base fw-semibold mb-8">
 									<div></div>
