--- a/owm/templates/owm/autoupdate/autoupdate_settings.html
+++ b/owm/templates/owm/autoupdate/autoupdate_settings.html
@@ -94,17 +94,16 @@
 
 
         <!--begin::Content-->
-            <span>Сформированные, но ещё не отправленные заказы на маркетплейсах по модели FBS, которые должны быть отгружены с вашего склада.
-                Эти заказы будут учитываться при синхронизации остатков: сначала из остатков в МойСклад будут вычтены эти заказы,
-                а затем произойдёт автоматическое обновление остатков товаров. (Для тех кто в танке: Это заказы, которые уже есть, но вы их ещё не отправили.
+            <span>При синхронизации, последние остатки на мойсклад отправляются на все указанные маркетплейсы.<br><br>
+
+                Обратите внимание, что если заказы уже сущесвтуют на маркетплейсе, то они нек учтуться ()
                 Перед обновлением остатков они сначала вычтутся из того, что есть на складе, а потом остатки обновятся.)</span>
         <!--end::Content--><br>
-            <span>Синхронизацию надо делать только при старте автообновления или при сбое работы автообновления или
-            при активации дополнительного маркетплейса.
-            При синхронизации, последние остатки на мойсклад отправляются на все указанные маркетплейсы.
+            <span>
+
             <u>Без синхронизации не запустится автообновление</u></span>
     <br>
-        <button type="submit" class="btn btn-primary btn-block" name="form_type" value="sync_start" style="max-width: 150px; width: 100%;">Синхронизация</button>
+        <button type="submit" class="btn btn-primary btn-block" name="form_type" value="sync_start" style="max-width: 150px; width: 100%;">Ручная синхронизация</button>
     </div>
 
 
