--- a/owm/templates/owm/settings/settings_matching.html
+++ b/owm/templates/owm/settings/settings_matching.html
@@ -80,7 +80,7 @@
     <input type="hidden" id="hidden-ozon" name="hidden-ozon" value="">
     <input type="hidden" id="hidden-wb" name="hidden-wb" value="">
     <input type="hidden" id="hidden-yandex" name="hidden-yandex" value="">
-    <input type="hidden" id="hidden-organization" name="hidden-organization" value="">
+    <input type="hidden" id="hidden-intersection" name="hidden-intersection" value="">
 
     <button type="submit" class="btn btn-primary btn-block">Сохранить</button>
     </form>
